       only, not requiring authentication on incoming invites, or both. Before,
       to not require authentication on incoming invites also required matching
       peers based on IP only.
 -- app_meetme
    -- If the first caller into a conference hangs up while being prompted for
       the conference pin number, the conference will no longer be held open.
 -- app_zapras
    -- We now ensure buffer policy is restored after RAS is done with a channel.
       This could cause audio problems on the channel after zapras is done
       with it. 
 -- logger
    -- The Asterisk logger will automatically detect when a log file needs to
       be rotated.  However, this feature could put Asterisk in a nasty loop
       that would result in a crash.
 -- general
    -- Added man pages for astgenkey, autosupport, and safe_asterisk

Asterisk 1.0.9

 -- fix bug in callerid matching in the dialplan that was introduced in 1.0.8

Asterisk 1.0.8

 -- chan_zap
    -- Asterisk will now also look in the regular context for the fax extension
       while executing a macro.  Previously, for this to work, the fax extension
       would have to be included in the macro definition.
    -- On some systems, ALERTING will be sent after PROCEEDING, so code has been
       added to account for this case.
    -- If no extension is specified on an overlap call, the 's' extension will 
       be used.
 -- chan_sip
    -- We no longer send a "to" tag on "100 Trying" messages, as it is 
       inappropriate to do so.
    -- We now respond correctly to an invite for T.38 with a "488 Not acceptable
       here"
    -- We now discard saved tags on 401/407 responses in case the provider we're
       talking to tries to pull a dirty trick on us and change it.
    -- rtptimeout options will now be correctly set on a peer basis rather than
       only global
 -- chan_mgcp
    -- Fixed setting of accountcode
    -- Fixed where *67 to block callerid only worked for first call
 -- chan_agent